🔧 Fix PWA paths for GitHub Pages deployment

--- a/manifest.json
+++ b/manifest.json
@@ -2,12 +2,12 @@
   "name": "UtilityHub - Airtime & Data Recharge",
   "short_name": "UtilityHub",
   "description": "Recharge airtime, buy data bundles for MTN, Airtel, Glo networks. Fast, secure, and convenient!",
-  "start_url": "/",
+  "start_url": "/pay4me/",
   "display": "standalone",
   "background_color": "#667eea",
   "theme_color": "#667eea",
   "orientation": "portrait",
-  "scope": "/",
+  "scope": "/pay4me/",
   "lang": "en",
   "categories": ["finance", "utilities", "productivity"],
   "icons": [
