🔄 Rebrand from UtilityHub to Pay4me
✨ Complete Brand Update:
- Changed app name in all HTML pages (titles, headers, footers)
- Updated logo from 📱 UtilityHub to 💳 Pay4me
- Modified PWA manifest (app name, shortcuts)
- Updated service worker cache name and notifications
- Changed JavaScript references and console logs
- Updated transaction receipts and user messaging
- Modified configuration and API labels

📱 Updated Files:
- index.html (hero section, navigation, footer)
- login.html (title, branding, welcome messages)
- airtime.html, data.html, sportybet.html (titles, logos, footers)
- status.html (page title and header)
- manifest.json (app name, description)
- sw.js (cache name, notifications)
- js/config.js (app configuration)
- js/main.js (initialization, receipts)
- js/paystack-service.js (payment labels)

🎯 Benefits:
- Consistent branding throughout the app
- Matches custom domain pay4me.com.ng
- Professional appearance for users
- Better brand recognition

App now fully branded as Pay4me! 💳

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "UtilityHub - Airtime & Data Recharge",
-  "short_name": "UtilityHub",
+  "name": "Pay4me - Airtime & Data Recharge",
+  "short_name": "Pay4me",
   "description": "Recharge airtime, buy data bundles for MTN, Airtel, Glo networks. Fast, secure, and convenient!",
   "start_url": "/",
   "display": "standalone",
