--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "utilityhub-backend",
+  "name": "pay4me-app",
   "version": "1.0.0",
-  "description": "Backend API for UtilityHub - Airtime and Data Purchase Platform",
+  "description": "Pay4me - Airtime, Data and Sportybet Payment Platform",
   "main": "index.js",
   "scripts": {
     "dev": "vercel dev",
     "build": "echo 'Build complete'",
-    "start": "vercel --prod"
+    "start": "vercel --prod",
+    "mobile-setup": "powershell -ExecutionPolicy Bypass -File setup-mobile-app.ps1",
+    "cap-copy": "npx cap copy",
+    "cap-android": "npx cap open android",
+    "cap-ios": "npx cap open ios"
   },
   "dependencies": {
     "cors": "^2.8.5"
