--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "cap-ios": "npx cap open ios"
   },
   "dependencies": {
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
   },
   "engines": {
     "node": "22.x"
