Configure custom domain pay4me.com.ng - Update all URLs and CORS settings

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
-  "functions": {
-    "api/**/*.js": {
-      "runtime": "@vercel/node"
-    }
-  },
   "headers": [
     {
       "source": "/api/(.*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "*"
+          "value": "https://pay4me.com.ng"
         },
         {
           "key": "Access-Control-Allow-Methods",
