--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,11 @@
         },
         {
           "key": "Access-Control-Allow-Headers",
-          "value": "Content-Type, Authorization"
+          "value": "Content-Type, Authorization, x-vercel-protection-bypass"
+        },
+        {
+          "key": "x-vercel-protection-bypass",
+          "value": "true"
         }
       ]
     }
