Update Vercel config to allow CORS from any origin and bypass protection

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "https://pay4me.com.ng"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Methods",
