Configure custom domain pay4me.com.ng with CORS and API settings

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
   "outputDirectory": ".",
+  "domains": ["pay4me.com.ng"],
   "headers": [
     {
       "source": "/api/(.*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "*"
+          "value": "https://pay4me.com.ng"
         },
         {
           "key": "Access-Control-Allow-Methods",
